# neura-robot-sdk

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  generate_proto.py  pyproject.toml  setup.py
client/robot_client/: __init__.py  __main__.py  client.py  session.py
client/tests/: test_client.py
proto/robot/v1/: robot.proto
server/: CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
server/src/app/: CMakeLists.txt  main.cc
server/src/domain/: CMakeLists.txt  motion_command.cc  robot_config.cc  robot_model.cc
server/src/domain/include/robot/domain/: motion_command.h  robot_config.h  robot_mode.h  robot_model.h
server/src/proto/: CMakeLists.txt
server/src/service/: CMakeLists.txt  proto_mapping.cc  robot_service_impl.cc
server/src/service/include/robot/service/: proto_mapping.h  robot_service_impl.h
server/test/: CMakeLists.txt  robot_model_test.cc  robot_service_impl_test.cc
